# uitest

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  flake.nix  uitest-config.cmake.in  uitest.nix
examples/: examples.cpp
include/uitest/: arg_info.hpp  uitest.hpp
src/: arg_info.cpp  uitest.cpp  uitest_main.cpp
test/: arg_info_test.cpp
